update readme and disable suggested and recommended packages

--- a/2.5.1/Dockerfile
+++ b/2.5.1/Dockerfile
@@ -8,17 +8,22 @@ RUN update-locale LANG=en_US.UTF-8
 
 # Install packages http://wiki.openstreetmap.org/wiki/Nominatim/Installation#Ubuntu.2FDebian
 RUN apt-get -y update --fix-missing && \
-    apt-get install -y build-essential libxml2-dev libpq-dev libbz2-dev libtool automake \
+    apt-get -o APT::Install-Recommends="false" -o APT::Install-Suggests="false" install -y build-essential libxml2-dev libpq-dev libbz2-dev libtool automake \
     libproj-dev libboost-dev libboost-system-dev libboost-filesystem-dev \
     libboost-thread-dev libexpat-dev gcc proj-bin libgeos-c1 libgeos++-dev \
-    libexpat-dev php5 php-pear php5-pgsql php5-json php-db libapache2-mod-php5 php5-intl \
+    libexpat-dev php5 php-pear php5-pgsql php5-json php-db libapache2-mod-php5 \
     postgresql postgis postgresql-contrib postgresql-9.3-postgis-2.1 \
     postgresql-server-dev-9.3 curl git autoconf-archive cmake python \
     lua5.1 liblua5.1-dev libluabind-dev \
     osmosis && \
+    apt-get purge -y libxcursor1 libx11-data xkb-data libxdamage1 libxfixes3 libxi6 libxcomposite1 \
+    libxrandr2 libgtk2.0-0 libxrender1 libxext6 libgdk-pixbuf2.0-0 libxinerama1 libcairo2 && \
+    apt-get autoremove -y && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
-    rm -rf /tmp/* /var/tmp/*
+    rm -rf /tmp/* /var/tmp/* && \
+    rm -rf /usr/share/doc/* && \
+    rm -rf /usr/share/man/*
 
 WORKDIR /app
 
@@ -28,9 +33,22 @@ RUN echo "host all  all    0.0.0.0/0  trust" >> /etc/postgresql/9.3/main/pg_hba.
 
 # Nominatim install
 ENV NOMINATIM_VERSION v2.5.1
-RUN git clone --recursive https://github.com/openstreetmap/Nominatim ./src
-RUN cd ./src && git checkout $NOMINATIM_VERSION && git submodule update --recursive --init && \
-  ./autogen.sh && ./configure && make
+ENV NOMINATIM_VERSION v2.5.1
+RUN git clone --branch $NOMINATIM_VERSION --depth 1 --recursive --progress https://github.com/openstreetmap/Nominatim ./src && \
+    rm -rf ./src/.git
+RUN cd ./src && \
+    ./autogen.sh && \
+    ./configure && \
+    sed -i.bak "s/createdb /createdb --template template0 /g" /app/src/utils/setup.php && \
+    rm /app/src/utils/*.bak && \
+    NUM_THREADS=`cat /proc/cpuinfo | grep "processor" | wc -l` && \
+    make -j$NUM_THREADS && \
+    cd /app/src/osm2pgsql && \
+    make install && \
+    strip /usr/local/bin/* && \
+    rm -rf /app/src/osm2pgsql && \
+    rm -rf /usr/local/share/man/* && \
+    rm -rf /usr/include/*
 
 
 # Nominatim create site
@@ -56,4 +74,7 @@ EXPOSE 5432
 EXPOSE 8080
 
 COPY start.sh /app/start.sh
-CMD /app/start.sh
+
+ENTRYPOINT ["/bin/bash", "/app/start.sh"]
+CMD [ "" ]
+
