--- a/3.0/Dockerfile
+++ b/3.0/Dockerfile
@@ -5,7 +5,7 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV LANG C.UTF-8
 
 RUN apt-get -y update -qq && \
-    apt-get -y install locales && \
+    apt-get -o APT::Install-Recommends="false" -o APT::Install-Suggests="false" install -y locales && \
     locale-gen en_US.UTF-8 && \
     update-locale LANG=en_US.UTF-8 && \
     apt-get install -y build-essential cmake g++ libboost-dev libboost-system-dev \
@@ -15,6 +15,7 @@ RUN apt-get -y update -qq && \
     apache2 php php-pgsql libapache2-mod-php php-pear php-db \
     php-intl git curl sudo \
     osmosis && \
+    apt-get autoremove -y && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /tmp/* /var/tmp/*
